--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@ RPG Starwars Game
                     <div class="panel-heading">
                         Choose your character
                     </div>
+                    <!-- This shows the panel body -->
                     <div class="panel-body" id="character">
-
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="assets/images/darthVader.jpg" class="media-object" style="width:100px">
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Darth Vader</h4>
+                                <p>This Captain of Chaos will never leave you wanting for less destrution. Luke, I am your father!!</p>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -67,7 +76,7 @@ RPG Starwars Game
         <div class="row">
             <div class="col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading" >
+                    <div class="panel-heading">
                         Fight Section
                     </div>
                     <div class="panel-body" id="fightSection">
