--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ RPG Starwars Game
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
+    <script type="text/javascript" src="assets/javascript/jquery-3.2.1.js"></script>
+    <script src="assets/javascript/games.js"></script>
+    <script src="assets/javascript/config.js"></script>
 </head>
 
 <body onload="">
@@ -108,107 +111,15 @@ RPG Starwars Game
     </div>
 
     <!-- Latest compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="assets/javascript/games.js"></script>
-    <script src="assets/javascript/config.js"></script>
+
     <script>
-        //global variables
-        var currentPlayerID = '';
-        var currentDefenderID = '';
-        var enemies = []; //array of enemy players
-        var currentPlayer = {};
-        var currentDefender = {};
-        var numAttacks = 0;
-        var initAttackPower = 0;  //place holder for storing the initial AP for the current player.
-        var enemiesRemaining = 0;
-
-        //Enumeration to represent game state
-        var gameState = {
-            newGame: true,
-            defenderSelected: false,
-            playerSelected: false,
-            playerDefeated: false,
-            defenderDefeated: false,
-            playerWins: false
-        }
-
         $(document).ready(function () {
 
             //The function sets all of the players values to random numbers within a specific range
             initializePlayers();
-
-            //Code to put the legend in the header
-            var hpLabel = $("<span id=''>");
-            hpLabel.addClass("badge healthPoints badge-success");
-            hpLabel.text('Health Points');
-            $('#headerRow').append(hpLabel);
-            var apLabel = $("<span id=''>");
-            apLabel.addClass("badge healthPoints badge-warning");
-            apLabel.text('Attack Power');
-            $('#headerRow').append(apLabel);
-            var capLabel = $("<span id=''>");
-            capLabel.addClass("badge healthPoints badge-danger");
-            capLabel.text('Counter Attack Power');
-            $('#headerRow').append(capLabel);
-
-            //Once the document is loaded check the config file and add a media object for each player in the config file
-            for (var index = 0; index < characters.length; index++) {
-                var player = characters[index];
-                console.log('------------------------------------');
-                console.log(player);
-
-                //set the hit points for the players
-
-                //Create a new media object for each character in the config file
-                var newCharacterElement = $("<div>");
-                newCharacterElement.addClass('media player');
-                newCharacterElement.attr('id', characters[index].id)
-
-                var newMediaLeft = $("<div>");
-                newMediaLeft.addClass('media-left');
-
-                var newMediaImage = $("<img>");
-                newMediaImage.addClass('media-object media-image');
-                newMediaImage.attr('src', characters[index].imgURL)
+            initializeGameBoard();
 
 
-                var newMediaBody = $("<div>");
-                newMediaBody.addClass('media-body');
-
-                //Generate heading
-                var newMediaHeading = $("<h5>");
-                newMediaHeading.addClass('media-heading');
-                newMediaHeading.text(characters[index].name);
-                var hpLabel = $("<span id='hpbadge'>");
-                hpLabel.addClass("badge healthPoints badge-success");
-                hpLabel.text(characters[index].healthPoints)
-                newMediaHeading.append(hpLabel);
-                var apLabel = $("<span id='apbadge'>");
-                apLabel.addClass("badge healthPoints badge-warning");
-                apLabel.text(characters[index].attackPower)
-                newMediaHeading.append(apLabel);
-                var capLabel = $("<span id='cpbadge'>");
-                capLabel.addClass("badge healthPoints badge-danger");
-                capLabel.text(characters[index].counterAttackPower)
-                newMediaHeading.append(capLabel);
-
-
-                var newMediaText = $("<p>");
-                newMediaText.text(characters[index].desc);
-
-                newMediaLeft.append(newMediaImage);
-                newMediaBody.append(newMediaHeading);
-                newMediaBody.append(newMediaText);
-                newCharacterElement.append(newMediaLeft);
-                newCharacterElement.append(newMediaBody);
-
-                $("#characters").append(newCharacterElement);
-
-                //Put a border around the character panel
-                $('#characters').addClass('panelBorder');
-                $('#fightSection').text('... Please select your character to start...');
-
-            }
 
             //When the user clicks a player move that player to the fight section and move the remaining players to the enemies secition
             $(".media").click(function () {
@@ -255,16 +166,17 @@ RPG Starwars Game
             //When the attack button is pressed
             $("#attack").click(function () {
 
-                if (!gameState.playerDefeated && !gameState.playerWins) {
+                if (!gameState.playerDefeated && !gameState.playerWins && gameState.defenderSelected) {
                     numAttacks++;
                     var newText = '';
                     if (currentPlayer.healthPoints > 1) {
                         newText = playerAttack();
                         $('#fightSection').text(newText);
                         updateCharacterDisplay();
-                        gameState.defenderSelected = false;
+
                         if (gameState.playerWins) {
                             $('#fightSection').text('CONGRATULATIONS!!!  You HAVE won!!');
+
                         }
 
                     } else {
@@ -273,42 +185,7 @@ RPG Starwars Game
 
                 }
 
-
             });
-            //This function updates the screen with the latest information for the player and defender that was passed.
-            function updateCharacterDisplay() {
-                //update the defender
-                if (gameState.defenderDefeated) {
-                    $('#' + currentDefenderID).remove();
-                    enemiesRemaining--;
-                    if (enemiesRemaining < 1) {
-                        gameState.playerWins = true;
-                    }
-                    gameState.defenderDefeated = false;
-                } else {
-                    var hpElement = $('#' + currentDefenderID).find('#hpbadge');
-                    hpElement.text(currentDefender.healthPoints);
-
-                    var apElement = $('#' + currentDefenderID).find('#apbadge');
-                    apElement.text(currentDefender.attackPower);
-
-                    var cpElement = $('#' + currentDefenderID).find('#cpbadge');
-                    cpElement.text(currentDefender.counterAttackPower);
-                }
-
-                //update the Player
-                var hpElement = $('#' + currentPlayerID).find('#hpbadge');
-                hpElement.text(currentPlayer.healthPoints);
-
-                var apElement = $('#' + currentPlayerID).find('#apbadge');
-                apElement.text(currentPlayer.attackPower);
-
-                var cpElement = $('#' + currentPlayerID).find('#cpbadge');
-                cpElement.text(currentPlayer.counterAttackPower);
-
-
-            }
-
         });
     </script>
 
